--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,10 +10,11 @@ html
   body
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
       .navbar-brand Taskleaf
-    ul.navbar-nav
+    ul.d-flex.align-items-center.mt-4 style="list-style:none; gap:20px;"
       - if current_user
         li.nav-item = link_to 'タスク一覧', tasks_path, class: 'nav-link'
-        li.nav-item = link_to 'ユーザー一覧', admin_users_path, class: 'nav-link'
+        - if current_user.admin?
+          li.nav-item = link_to 'ユーザー一覧', admin_users_path, class: 'nav-link'
         li.nav-item = button_to "ログアウト", logout_path, method: :delete, class: 'btn btn-danger'
       - else
         li.nav-item = link_to 'ログイン', login_path, class: 'nav-link'
